BillReminder 0.3.x
==================

 Translations:
  * Croatian translation by Mario Ðani

BillReminder 0.3.1
==================

 Bugs:
 #1906715 - New records can now be created by double-clicking a date in
  the main calendar. The due date for this new record will be set to the
 date selected upon double-clicking.
 #1908445 - Fixed a bug that would cause recurring bills not to expand
  beyond the current year.

 Translations:
   * French translation added by Robert-André Mauchin
   * Dutch translation updated by Daniel van Eeden

 Graphical Interface:
  * Display categories by category name in ascending order in the categories dialog.
  * Display the colored tile for each category next to its name in the categories dropdown in the add/edit dialog.

BillReminder 0.3.0
==================

2008-03-01  Og Maciel <ogmaciel@gnome.org>

    * This was a massive rewrite of the entire application, and instead
    of listing all files that have been changd, I'll try to highlight
    the most important changes and features instead.
    * GLADE: BillReminder 0.3 was entirely re-written in order to remove
    all glade files and dependencies. The initial idea was to simply
    get rid of the dependency, but it also served as a learning process
    for me (and I believe the other contributors will agree with this
    as well).
    * DBUS: The DBUS layer received a bit more love from Luiz Armesto,
    breaking it down into the proper calls so to separate the 'engine'
    per se from the client.
    * UI: The user interface has also gone a series of changes and
    (hopefully) improvements. It is probably not 100% HIG compliant yet,
    but we'll gladly accept suggestions.
    * Bug management: Towards the last 8 weeks of development we've adopted
    the habit of filing bug reports prior to fixing the issues that we
    encountered during the development cycle.
    * Translations: All prior contributors promptly replied to my email